force-app/main/default/objects/FSAM_Service_Part__c/FSAM_Service_Part__c.object-meta.xml
<CustomObject>
    <label>FSAM Service Part</label>
    <nameField>
        <label>Part Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSAM Service Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>