force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Active__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the spare part is active.</description>
    <inlineHelpText>Uncheck when this part is no longer available.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>