force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Available_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current available inventory.</description>
    <inlineHelpText>Enter the available quantity in inventory.</inlineHelpText>
    <label>Available Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>