force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_External_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>FSAM_External_Part_ID__c</fullName>
    <description>External identifier from inventory systems.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the identifier from the external inventory system.</inlineHelpText>
    <label>External Part ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>