force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Manufacturer__c</fullName>
    <description>Manufacturer of the service part.</description>
    <inlineHelpText>Enter the manufacturer of the spare part.</inlineHelpText>
    <label>Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>