force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Minimum_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Minimum_Stock_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum inventory level before restocking.</description>
    <inlineHelpText>Enter the minimum stock quantity.</inlineHelpText>
    <label>Minimum Stock Level</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>