force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Part_Name__c</fullName>
    <description>Name of the spare part.</description>
    <inlineHelpText>Enter the descriptive name of the service part.</inlineHelpText>
    <label>Part Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>