force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Reorder_Required__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Reorder_Required__c</fullName>
    <description>Indicates whether available inventory has reached or fallen below the minimum stock level.</description>
    <formula>FSAM_Available_Quantity__c &lt;= FSAM_Minimum_Stock_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder Required</label>
    <type>Checkbox</type>
</CustomField>