force-app/main/default/objects/FSAM_Service_Part__c/fields/FSAM_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Unit_Cost__c</fullName>
    <description>Cost of one unit.</description>
    <inlineHelpText>Enter the unit cost of this spare part.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>