force-app/main/default/objects/FSAM_Service_Part__c/validationRules/FSAM_VR_Available_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Available_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>FSAM_Available_Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FSAM_Available_Quantity__c</errorDisplayField>
    <errorMessage>Inventory cannot be negative.</errorMessage>
</ValidationRule>