force-app/main/default/objects/FSAM_Service_Part__c/validationRules/FSAM_VR_Minimum_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Minimum_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>FSAM_Minimum_Stock_Level__c &lt; 0</errorConditionFormula>
    <errorMessage>Minimum stock cannot be negative.</errorMessage>
</ValidationRule>