force-app/main/default/objects/FSAM_Service_Part__c/validationRules/FSAM_VR_Unit_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Unit_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>FSAM_Unit_Cost__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FSAM_Unit_Cost__c</errorDisplayField>
    <errorMessage>Unit cost cannot be negative.</errorMessage>
</ValidationRule>