force-app/main/default/objects/FSAM_Service_Part__c/listViews/Active_Parts.listView-meta.xml
<ListView>
    <fullName>Active_Parts</fullName>
    <columns>FSAM_Part_Name__c</columns>
    <columns>FSAM_Manufacturer__c</columns>
    <columns>FSAM_Available_Quantity__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FSAM_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Parts</label>
</ListView>