force-app/main/default/objects/FSAM_Service_Part__c/listViews/Low_Stock_Parts.listView-meta.xml
<ListView>
    <fullName>Low_Stock_Parts</fullName>
    <columns>FSAM_Part_Name__c</columns>
    <columns>FSAM_Available_Quantity__c</columns>
    <columns>FSAM_Minimum_Stock_Level__c</columns>
    <columns>FSAM_Unit_Cost__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FSAM_Reorder_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Low Stock Parts</label>
</ListView>